# pydialog

./: .gitignore  README.md  osdialog_win.c  pydialog.c  pyproject.toml  setup.py  test.py
